feat(get all questions): consume api to get all questions
- fetch all questions from the database
- refactor UI to suit data from the database
- refactor query to include number of answers a question has

[Finishes #160825068]

--- a/UI/answers.html
+++ b/UI/answers.html
@@ -89,7 +89,7 @@
     </section>
   </main>
   <footer>
-    <p>StackOverflowLite&copy; 2018</p>
+    <p style="color:#848d95">StackOverflowLite&copy; 2018</p>
   </footer>
   <script src="./js/main.js"></script>
 </body>
