--- a/UI/homepage.html
+++ b/UI/homepage.html
@@ -30,15 +30,6 @@
     </div>
   </header>
   <main>
-    <!-- <section id="showcase"> -->
-      <!-- background image-->
-      <!-- <img src="./img/stackflow.jpg" alt="">
-      <aside>
-        <h1>Learn, Share, Build</h1>
-        <p>Each month, over millions of developers come to StackOverflowLite to learn, share their knowledge, and build their collaborative relationships.</p>
-        <p>Join a growing community developers.</p>
-      </aside>
-    </section> -->
     <section>
       <div class="h-content">
         <div id="content-header">
@@ -48,7 +39,7 @@
           <button id="btn-ask"><a href="askquestion.html">Ask Question</a></button>
         </div>
       </div>
-      <div class="content-container">
+      <!-- <div class="content-container">
         <div class="votes">
           <div class="v-counts">
             <span title="">2</span>
@@ -65,120 +56,13 @@
           <h3><a href="answers.html">How do i use html to build a website</a></h3>
         </div>
         <div class="who-asked"><a href="answers.html">asked by fredi</a><span title="time asked"></span></div>
-      </div>
-      <div class="content-container">
-        <div class="votes">
-          <div class="v-counts">
-            <span title="">2</span>
-          </div>
-          <div class="quote">votes</div>
-        </div>
-        <div class="answers">
-          <div class="ans-counts">
-            <span title="">3</span>
-          </div>
-          <div class="quote">answers</div>
-        </div>
-        <div class="ques-details">
-          <h3><a href="answers.html">How do I use Css grid to layout my website</a></h3>
-        </div>
-        <div class="who-asked"><a href="answers.html">asked by tosin</a><span title="time asked"></span></div>
-      </div>
-        <div class="content-container">
-          <div class="votes">
-            <div class="v-counts">
-              <span title="">3</span>
-            </div>
-            <div class="quote">votes</div>
-          </div>
-          <div class="answers">
-            <div class="ans-counts">
-              <span title="">5</span>
-            </div>
-            <div class="quote">answers</div>
-          </div>
-          <div class="ques-details">
-            <h3><a href="answers.html">What is the difference between java and javascript</a></h3>
-          </div>
-          <div class="who-asked"><a href="answers.html">asked by tobi</a><span title="time asked"></span></div>
-        </div>
-        <div class="content-container">
-          <div class="votes">
-            <div class="v-counts">
-              <span title="">1</span>
-            </div>
-            <div class="quote">votes</div>
-          </div>
-          <div class="answers">
-            <div class="ans-counts">
-              <span title="">5</span>
-            </div>
-            <div class="quote">answers</div>
-          </div>
-          <div class="ques-details">
-            <h3><a href="answers.html">How do you add a sticky header effect on the header of your website?</a></h3>
-          </div>
-          <div class="who-asked"><a href="answers.html">asked by somto</a><span title="time asked"></span></div>
-        </div>
-        <div class="content-container">
-          <div class="votes">
-            <div class="v-counts">
-              <span title="">2</span>
-            </div>
-            <div class="quote">votes</div>
-          </div>
-          <div class="answers">
-            <div class="ans-counts">
-              <span title="">6</span>
-            </div>
-            <div class="quote">answers</div>
-          </div>
-          <div class="ques-details">
-            <h3><a href="answers.html">How do I style my button to look nice?</a></h3>
-          </div>
-          <div class="who-asked"><a href="answers.html">asked by emiko</a><span title="time asked"></span></div>
-        </div>
-        <div class="content-container">
-          <div class="votes">
-            <div class="v-counts">
-              <span title="">5</span>
-            </div>
-            <div class="quote">votes</div>
-          </div>
-          <div class="answers">
-            <div class="ans-counts">
-              <span title="">3</span>
-            </div>
-            <div class="quote">answers</div>
-          </div>
-          <div class="ques-details">
-            <h3><a href="answers.html">How do i integrate travis with my project</a></h3>
-          </div>
-          <div class="who-asked"><a href="answers.html">asked by sam</a><span title="time asked"></span></div>
-        </div>
-        <div class="content-container">
-          <div class="votes">
-            <div class="v-counts">
-              <span title="">5</span>
-            </div>
-            <div class="quote">votes</div>
-          </div>
-          <div class="answers">
-            <div class="ans-counts">
-              <span title="">3</span>
-            </div>
-            <div class="quote">answers</div>
-          </div>
-          <div class="ques-details">
-            <h3><a href="answers.html">How do i use html to build a website</a></h3>
-          </div>
-          <div class="who-asked"><a href="link to question">asked by james</a><span title="time asked"></span></div>
-          </div>
+      </div> -->
     </section>
   </main>
   <footer>
-    <p>StackOverflowLite&copy; 2018</p>
+    <p style="color:#848d95">StackOverflowLite&copy; 2018</p>
   </footer>
   <script src="./js/main.js"></script>
+  <script src="/UI/client/getQuestions.js"></script>
 </body>
 </html>
