--- a/UI/askquestion.html
+++ b/UI/askquestion.html
@@ -69,7 +69,7 @@
     </section>
   </main>
   <footer id="question-footer">
-    <p>StackOverflowLite&copy; 2018</p>
+    <p style="color:#848d95">StackOverflowLite&copy; 2018</p>
   </footer>
   <script src="./js/main.js"></script>
 </body>
