--- a/UI/index.html
+++ b/UI/index.html
@@ -177,7 +177,7 @@
     </section>
   </main>
   <footer>
-    <p>StackOverflowLite&copy; 2018</p>
+    <p style="color:#848d95">StackOverflowLite&copy; 2018</p>
   </footer>
   <script src="./js/main.js"></script>
 </body>
