--- a/UI/signup.html
+++ b/UI/signup.html
@@ -79,7 +79,7 @@
     </section>
   </main>
   <footer id="login-footer">
-    <p>StackOverflowLite&copy; 2018</p>
+    <p style="color:#848d95">StackOverflowLite&copy; 2018</p>
   </footer>
   <script src="./js/main.js"></script>
   <script src="/UI/client/signup.js"></script>
