feat(delete question): Implement the delete feature from the front-end
- consume api to fetch the delete route
- refactor UI
- refactor source code to accomodate new changes
-
[Finishes #160875226]

--- a/UI/answers.html
+++ b/UI/answers.html
@@ -22,15 +22,15 @@
         </form>
         <nav>
           <ul>
-            <li><a href="index.html">Logout</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="/UI/index.html">Logout</a></li>
+            <li><a href="/UI/profile.html">Profile</a></li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
   <main>
-    <section id=ans-container>
+    <section id="ans-container">
       <!-- <div class="ans-header">
         <h1><a href="#">How do I use Css grid to layout my website</a></h1>
       </div>
@@ -38,7 +38,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sequi tempore vero recusandae nobis praesentium, inventore aliquam voluptatibus molestiae dicta.</p>
         <div class="user-tag">by username</div>
       </div> -->
-      <div><h3>Answers</h3></div>
+      <!-- <button id="delete-question" id="deleteBtn">Delete</button> -->
+      <div id="answers-container"><h2>Answers</h2></div>
       <div class="ans-votes-container">
         <!-- <div class="ans-votes">
           <a href="vote-up"><i class="far fa-arrow-alt-circle-up fa-2x"></i></a>
@@ -70,5 +71,6 @@
   <script src="./js/main.js"></script>
   <script src="/UI/client/getOneQuestion.js"></script>
   <script src="/UI/client/postAnswer.js"></script>
+  <script src="/UI/client/deleteQuestion.js"></script>
 </body>
 </html>
