--- a/UI/askquestion.html
+++ b/UI/askquestion.html
@@ -22,8 +22,8 @@
         </form>
         <nav>
           <ul>
-            <li><a href="index.html">Logout</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="/UI/index.html">Logout</a></li>
+            <li><a href="/UI/profile.html">Profile</a></li>
           </ul>
         </nav>
       </div>
