--- a/UI/profile.html
+++ b/UI/profile.html
@@ -22,7 +22,7 @@
         </form>
         <nav>
           <ul>
-            <li><a href="index.html">Logout</a></li>
+            <li><a href="/UI/index.html">Logout</a></li>
             <!-- <li><a href="profile.html">Profile</a></li> -->
           </ul>
         </nav>
